@@ -29,6 +29,7 @@ TESTS_ENVIRONMENT = \
     X509_CERT_DIR="$(X509_CERT_DIR)" \
     LIBTOOL="$(LIBTOOL)" \
     GLOBUS_HOSTNAME="localhost" \
+    VALGRIND="$(VALGRIND)" \
     GRIDMAP="$(GRIDMAP)" ;
 
 TEST_EXTENSIONS = .pl
