@@ -1,3 +1,12 @@
+globus-dsi-rest (0.6-1+gt6.@distro@) @distro@; urgency=low
+
+  * Add valgrind hook to tests
+  * Change argument to globus_dsi_rest_*_gridftp_op
+  * Move GridFTP range handling to DSI's responsibility
+  * Fix documentation of globus_dsi_rest_write_block_arg_t
+
+ -- Globus Toolkit <support@globus.org>  Wed, 22 Jun 2016 14:17:06 -0400
+
 globus-dsi-rest (0.5-1+gt6.@distro@) @distro@; urgency=low
 
   * Add more build dependencies
